--- a/external-patches/TUIO/CMakeLists.txt
+++ b/external-patches/TUIO/CMakeLists.txt
@@ -1,6 +1,5 @@
-#
-# Copyright Regents of the University of Minnesota, 2014.  This software is released under the following license: http://opensource.org/licenses/GPL-2.0.
-# Source code originally developed at the University of Minnesota Interactive Visualization Lab (http://ivlab.cs.umn.edu).
+# This file is part of the MinVR cmake build system.  
+# See the main MinVR/CMakeLists.txt file for authors, copyright, and license info.
 #
 # Code author(s):
 # 		Dan Orban (dtorban)
