--- a/tests-batch/plugin/CMakeLists.txt
+++ b/tests-batch/plugin/CMakeLists.txt
@@ -1,4 +1,5 @@
-# Create a library from the source files in this directory.
+# This file is part of the MinVR cmake build system.  
+# See the main MinVR/CMakeLists.txt file for authors, copyright, and license info.
 
 add_subdirectory(example)
 add_subdirectory(info)
