--- a/utils/mvrlookup/CMakeLists.txt
+++ b/utils/mvrlookup/CMakeLists.txt
@@ -1,3 +1,6 @@
+# This file is part of the MinVR cmake build system.  
+# See the main MinVR/CMakeLists.txt file for authors, copyright, and license info.
+
 
 project(MVRLookup)
 
