--- a/plugins/OpenVR/CMakeLists.txt
+++ b/plugins/OpenVR/CMakeLists.txt
@@ -1,14 +1,26 @@
+# This file is part of the MinVR cmake build system.  
+# See the main MinVR/CMakeLists.txt file for authors, copyright, and license info.
+#
+# Builds the MinVR_OpenVR plugin as a shared library.
+
+# Note: This CMakeLists.txt is not intended to work on its own.  It inherits many settings 
+# from the root CMakeLists.txt (build and install directories, compiling flags, #defines, etc.)
+
+
+
+
+# By convention, plugin names begin with "MinVR_"
 project(MinVR_OpenVR)
 
+
+# Source:
 set(SOURCEFILES
-  ${CMAKE_SOURCE_DIR}/third-party/GLEW/glew.c
   src/VROpenVRNodePlugin.cpp
   src/VROpenVRNode.cpp
   src/VROpenVRInputDevice.cpp
   src/VROpenVRRenderModel.cpp
   src/VROpenVRRenderModelHandler.cpp
 )
-
 set (HEADERFILES
 	src/VROpenVRNode.h
 	src/VROpenVRInputDevice.h
@@ -16,167 +28,79 @@ set (HEADERFILES
 	src/VROpenVRRenderModelHandler.h
 )
 
-source_group("Header Files" FILES ${HEADERFILES})
 
-#------------------------------------------
-# Download dependencies
-#------------------------------------------
+# Setup dependency on libMinVR:
+list(APPEND MY_INC_DIRS src)
+list(APPEND MY_LIB_DIRS ${CMAKE_BINARY_DIR})
+list(APPEND MY_LIBS MinVR)
 
-# OpenGL
-find_package(OpenGL REQUIRED)
-set(OPENGL_LIBRARIES ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
-set(OPENGL_INCLUDE_DIRS ${OPENGL_INCLUDE_DIR})
-include_directories(${OPENGL_INCLUDE_DIRS})
 
-message(STATUS "OpenGL includes (for OpenVR): " ${OPENGL_INCLUDE_DIRS})
-message(STATUS "OpenGL library (for OpenVR): " ${OPENGL_LIBRARIES})
+# Setup dependency on OpenVR:
+include(UseOpenVR)
+UseOpenVR()
+list(APPEND MY_INC_DIRS ${OPENVR_INCLUDE_DIR})
+list(APPEND MY_LIB_DIRS ${OPENVR_LIBRARY_DIR})
+list(APPEND MY_LIBS ${OPENVR_LIBRARIES})
 
-#------------------------------------------
-# MinVR Dependencies
-#------------------------------------------
+# Setup dependency on OpenGL:
+include(UseOpenGL)
+UseOpenGL()
+list(APPEND MY_INC_DIRS ${OPENGL_INCLUDE_DIR})
+list(APPEND MY_LIB_DIRS ${OPENGL_LIBRARY_DIR})
+list(APPEND MY_LIBS ${OPENGL_LIBRARIES})
 
-include_directories(
-	${CMAKE_SOURCE_DIR}/third-party/GLEW
-)
-
-#if (NOT MinVR_INCLUDE_DIRS)
-#	message( FATAL_ERROR "MinVR_INCLUDE_DIRS must be set." )
-#endif()
-#if (NOT MinVR_BINARY_DIRS)
-#	message( FATAL_ERROR "MinVR_BINARY_DIRS must be set." )
-#endif()
-
-#include_directories(${MinVR_INCLUDE_DIRS})
-link_directories(${CMAKE_BINARY_DIR}/lib)
-#link_directories(${MinVR_BINARY_DIRS})
-add_definitions(-DGLEW_STATIC)
-
-#------------------------------------------
-# Include Directories
-#------------------------------------------
-
-# Include Directories
-include_directories (
-  src
-)
-
-SET(CMAKE_MODULE_PATH  ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH} )
-find_package(OpenVR QUIET)
-if(NOT OPENVR_FOUND)
-
-  message(STATUS "OpenVR not found.  Will try building it.")
-  
-	set(DepName OpenVR) 
-
-	set(${DepName}_checkout_Dir ${PROJECT_SOURCE_DIR}/lib/${DepName}/src)
-	make_directory(${${DepName}_checkout_Dir})
-	include(ExternalProject)
-	
-	set(${DepName}_build_dir ${CMAKE_BINARY_DIR}/deps/${DepName})
-	set(${DepName}_stamp_dir ${${DepName}_build_dir}/stamp)
-	set(${DepName}_tmp_dir ${${DepName}_build_dir}/tmp)
-	
-	set(${DepName}_PREFIX "${${DepName}_checkout_Dir}")
-  make_directory(${CMAKE_INSTALL_PREFIX}/ext/${DepName})
-	set(${DepName}_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/ext/${DepName}")
-	
-	set(${DepName}_CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${${DepName}_INSTALL_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS=-fPIC -DQNANHIBIT=1)
-	set(${DepName}_DIR "${${DepName}_INSTALL_DIR}")
-	
-	if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-		set(${DepName}_CMAKE_ARGS ${${DepName}_CMAKE_ARGS})
-	endif()
-	
-	set(${DepName}_PATCH "")
-	   
-	ExternalProject_add(${DepName}
-		PREFIX ${${DepName}_PREFIX}
-		GIT_REPOSITORY https://github.com/ivlab/openvr
-		GIT_TAG master
-		INSTALL_DIR ${${DepName}_INSTALL_DIR}
-		CMAKE_ARGS ${${DepName}_CMAKE_ARGS}
-		UPDATE_COMMAND ""
-		DOWNLOAD_DIR ${${DepName}_checkout_Dir}
-		SOURCE_DIR ${${DepName}_checkout_Dir}
-		TMP_DIR ${${DepName}_tmp_dir}
-		STAMP_DIR ${${DepName}_stamp_dir}
-		BINARY_DIR ${${DepName}_build_dir}
-	)
-
-  message(STATUS "Building ${DepName} from: ${${DepName}_PREFIX}.")
-  message(STATUS "Installing ${DepName} to: ${${DepName}_INSTALL_DIR}.")
-
-	set(OPENVR_INCLUDE_DIRS ${${DepName}_checkout_Dir}/headers)
-             
-    if(MSVC)
-		#set(OPENVR_LIBRARY ${${DepName}_INSTALL_DIR}/lib/openvr_api64.lib)
-		set(OPENVR_LIBRARY ${${DepName}_checkout_Dir}/lib/win64/openvr_api.lib)
-	else()
-		set(OPENVR_LIBRARY ${${DepName}_INSTALL_DIR}/lib/libopenvr_api.a)
-	endif()
-
-	set(OPENVR_LIBRARIES ${OPENVR_LIBRARY})
-
+# Setup dependency on GLEW (only needed on Windows):
+if (WIN32)
+  include(UseGLEW)
+  UseGLEW()
+  list(APPEND MY_INC_DIRS ${GLEW_INCLUDE_DIR})
+  list(APPEND MY_LIB_DIRS ${GLEW_LIBRARY_DIR})
+  list(APPEND MY_LIBS ${GLEW_LIBRARIES})
 endif()
 
-#add_definitions(-D_EASYBLENDSDK_LINUX)
-include_directories(${OPENVR_INCLUDE_DIRS})
-
-message(STATUS "OpenVR includes: " ${OPENVR_INCLUDE_DIRS})
-message(STATUS "OpenVR library: " ${OPENVR_LIBRARIES})
-
-
-#------------------------------------------
-# Specific preprocessor defines
-#------------------------------------------
-
-# Windows Section #
+# Setup dependency on C++-11:
 if (MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+endif()
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-	find_package(X11)
-	set(LIBS_ALL ${LIBS_ALL} ${CMAKE_THREAD_LIBS_INIT} rt Xrandr Xxf86vm Xi m dl ${X11_LIBRARIES})
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  endif()
 endif()
 
-#------------------------------------------
-# Set output directories to lib, and bin
-#------------------------------------------
 
-set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/bin)
-foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
-	string (TOUPPER ${CONF} CONF)
-	set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/bin)
-	set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-	set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-endforeach(CONF CMAKE_CONFIGURATION_TYPES)
+# Create the shared library:
+include_directories(${MY_INC_DIRS})
+link_directories(${MY_LIB_DIRS})
+add_library(${PROJECT_NAME} SHARED ${HEADERFILES} ${SOURCEFILES})
+target_link_libraries(${PROJECT_NAME} ${MY_LIBS} ${LIBS_ALL})
 
-#------------------------------------------
-# Build Target
-#------------------------------------------
 
-SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
-SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
-SET(CMAKE_INSTALL_RPATH "${VRPlugins_install_dir}/${PROJECT_NAME}/lib")
-SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-add_library ( ${PROJECT_NAME} SHARED ${HEADERFILES} ${SOURCEFILES} )
-target_link_libraries(${PROJECT_NAME} ${OPENVR_LIBRARIES} ${OPENGL_LIBRARIES} MinVR ${LIBS_ALL})
-
-if(NOT OPENVR_FOUND)
-	add_dependencies(${PROJECT_NAME} OpenVR)
+# If we have dependencies that were not found pre-installed on the system
+# and that will be built as part of the MinVR build process, then these
+# must be listed as dependencies of the current project so that cmake
+# builds them first.
+if (${OPENVR_AUTOBUILT})
+    add_dependencies(${PROJECT_NAME} OpenVR)
 endif()
 
-#------------------------------------------
-# Install Target
-#------------------------------------------
 
+# Installation:
 install( TARGETS ${PROJECT_NAME}
-         LIBRARY DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
-         ARCHIVE DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
-         RUNTIME DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/bin)
-		 
-set_property(TARGET MinVR_OpenVR PROPERTY FOLDER "plugins")
+         LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+         ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+         RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+
+
+# For better organization when using an IDE with folder structures:
+source_group("Header Files" FILES ${HEADERFILES})
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "plugins")
+
+
