--- a/plugins/Python/CMakeLists.txt
+++ b/plugins/Python/CMakeLists.txt
@@ -1,94 +1,67 @@
+# This file is part of the MinVR cmake build system.  
+# See the main MinVR/CMakeLists.txt file for authors, copyright, and license info.
+#
+# Builds the MinVR_Python plugin as a shared library.
+
+# Note: This CMakeLists.txt is not intended to work on its own.  It inherits many settings 
+# from the root CMakeLists.txt (build and install directories, compiling flags, #defines, etc.)
+
+
+
+
+# By convention, plugin names begin with "MinVR_"
 project(MinVR_Python)
 
+
+# Source:
 set (SOURCEFILES 
   src/VRPythonPlugin.cpp
   src/VRMainPython.cpp
   src/VRDataIndexPython.cpp
 )
-
 set (HEADERFILES
 )
 
-source_group("Header Files" FILES ${HEADERFILES})
 
-#------------------------------------------
-# Download dependencies
-#------------------------------------------
+# Setup dependency on libMinVR:
+list(APPEND MY_INC_DIRS src)
+list(APPEND MY_LIB_DIRS ${CMAKE_BINARY_DIR})
+list(APPEND MY_LIBS MinVR)
 
-# OpenGL
-find_package(OpenGL REQUIRED)
-set(OPENGL_LIBRARIES ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
-set(OPENGL_INCLUDE_DIRS ${OPENGL_INCLUDE_DIR})
-include_directories(${OPENGL_INCLUDE_DIRS})
 
-#------------------------------------------
-# MinVR Dependencies
-#------------------------------------------
-
-link_directories(${CMAKE_BINARY_DIR}/lib)
-
-#------------------------------------------
-# Include Directories
-#------------------------------------------
-
-# Include Directories
-include_directories (
-  src
-)
-
-#------------------------------------------
-# Specific preprocessor defines
-#------------------------------------------
-
-# Windows Section #
+# Setup dependency on C++-11
 if (MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  endif()
 endif()
 
-#------------------------------------------
-# Set output directories to lib, and bin
-#------------------------------------------
 
-set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/bin)
-foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
-	string (TOUPPER ${CONF} CONF)
-	set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/bin)
-	set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-	set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
-endforeach(CONF CMAKE_CONFIGURATION_TYPES)
+# Create the shared library:
+include_directories(${MY_INC_DIRS})
+link_directories(${MY_LIB_DIRS})
+add_library(${PROJECT_NAME} SHARED ${HEADERFILES} ${SOURCEFILES})
+target_link_libraries(${PROJECT_NAME} ${MY_LIBS} ${LIBS_ALL})
 
-#------------------------------------------
-# Build Target
-#------------------------------------------
 
-SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
-SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
-SET(CMAKE_INSTALL_RPATH "${VRPlugins_install_dir}/${PROJECT_NAME}/lib")
-SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-add_library ( ${PROJECT_NAME} SHARED ${HEADERFILES} ${SOURCEFILES} )
-target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} MinVR ${LIBS_ALL})
-
-add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
-                   COMMAND ${CMAKE_COMMAND} -E copy_directory
-                       ${PROJECT_SOURCE_DIR}/src/python ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/python)
-
-#------------------------------------------
-# Install Target
-#------------------------------------------
-
-install(DIRECTORY ${PROJECT_SOURCE_DIR}/src/python  DESTINATION "plugins/${PROJECT_NAME}/" FILES_MATCHING PATTERN "*.*")
-
+# Installation:
 install( TARGETS ${PROJECT_NAME}
-         LIBRARY DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
-         ARCHIVE DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
-         RUNTIME DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/bin)
-		 
+         LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+         ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+         RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+
+
+# For better organization when using an IDE with folder structures:
+source_group("Header Files" FILES ${HEADERFILES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "plugins")
+
